# -AI-

./: 1-multimodalopenai.ipynb  README.md  main.py  pyproject.toml
src/: Flight.ipynb
src/Advanced_Chunking/: 1-semantichunking.ipynb
src/AgentRAG/: 1.SingleAgentRAG.ipynb
src/Agent_Langgraph/: IETLS_Agent.ipynb  Multi-Agent.ipynb  Planning-Agent.ipynb  ReAct-Agent.ipynb
src/DownloadModel/: download-model.ipynb
src/Hybrid Retrieval/: 1-densesparse.ipynb  2-reranking.ipynb  3-mmr.ipynb
src/MultiModal RAG/: 1-multimodalopenai.ipynb
src/Query Rewriter/: 1-queryexpansion.ipynb  2-querydecomposition.ipynb  3-HyDE.ipynb
src/Query Rewriter/output/kenshin_for_hyde.db/: chroma.sqlite3
src/Query Rewriter/output/langchain/: chroma.sqlite3
src/RAG/: 1.NaiveRAG.ipynb  2.AdvanceRAG.ipynb
src/Text2SQL/: app.py  chart_generator.py  db_operations.py  requirements.txt  sql_generator.py
src/Text2SQL/config_db/: db_warehouse.py
src/Vector/: 1.Chroma.ipynb  2.Faiss.ipynb
src/Vector/chroma_db/: chroma.sqlite3
