[project]
name = "code-ai-before-sleep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.16",
    "faiss-cpu>=1.11.0.post1",
    "groq>=0.31.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.18",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.7",
    "langchain-openai>=0.3.31",
    "langgraph>=0.6.4",
    "mariadb>=1.1.13",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "pypdf>=5.9.0",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.48.1",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.0",
]
