[project]
name = "code-ai-before-sleep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.16",
    "faiss-cpu>=1.11.0.post1",
    "fitz>=0.0.1.dev2",
    "groq>=0.31.0",
    "hf-xet>=1.1.7",
    "huggingface-hub[hf-xet]>=0.34.4",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.18",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.7",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.31",
    "langgraph>=0.6.4",
    "mariadb>=1.1.13",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "pymupdf>=1.26.4",
    "pypdf>=5.9.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.48.1",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.0",
    "wikipedia>=1.4.0",
]
